# fileop

./: CMakeLists.txt  Readme.md  vcpkg.json
src/: server.cpp  server.hpp
src/client/: CMakeLists.txt  client.cpp  client.hpp
src/server/: CMakeLists.txt
src/server/src/: server.cpp
